swagger und app.py ansich fertig
