# db/swagger.yml
@@ -19,15 +19,14 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Pet"
-                
-        '404':
-          description: Keine Tiere gefunden
+        '500':
+          description: Fehler beim Abrufen
           content:
             application/json:
               schema:
                 type: string
-                example: No Pet was found
-    
+                example: Error
+
   /pets/{id}:
     get:
       tags:
@@ -46,23 +45,22 @@ paths:
           content:
             application/json:
               schema:
-                type: object
                 $ref: "#/components/schemas/Pet"
         '404':
-            description: Tier nicht gefunden
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: No Pet was found
+          description: Tier nicht gefunden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: No pet was found
         '500':
-          description: Error
+          description: Fehler beim Abrufen
           content:
             application/json:
               schema:
                 type: string
                 example: Error
-        
+
     put:
       tags:
         - Update
@@ -73,10 +71,8 @@ paths:
           required: true
           schema:
             type: integer
-          description: ID des Tiers
       requestBody:
         required: true
-        description: Aktualisierte Werte
         content:
           application/json:
             schema:
@@ -84,16 +80,12 @@ paths:
               properties:
                 name:
                   type: string
-                  example: seali
                 hunger:
                   type: integer
-                  example: 80                    
                 energy:
                   type: integer
-                  example: 60
                 mood:
                   type: integer
-                  example: 30
       responses:
         '200':
           description: Haustier erfolgreich aktualisiert
@@ -102,20 +94,26 @@ paths:
               schema:
                 type: string
                 example: Pet updated
-      
         '404':
-          description: Haustier wurde nicht aktualisiert
+          description: Haustier nicht gefunden
           content:
             application/json:
               schema:
                 type: string
                 example: Update failed
-                           
+        '500':
+          description: Fehler beim Update
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Error
+
   /pets/{id}/feed:
     post:
       tags:
-      - Aktionen
-      summary: Haustier wird gefüttert ... Hunger verringert sich um...
+        - Aktionen
+      summary: Haustier füttern (Hunger steigt)
       parameters:
         - name: id
           in: path
@@ -129,16 +127,16 @@ paths:
             application/json:
               schema:
                 type: string
-                example: fed
+                example: Pet fed
         '404':
-            description: Tier nicht gefunden
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: No Pet was found
+          description: Tier nicht gefunden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Feed failed
         '500':
-          description: Error
+          description: Fehler beim Füttern
           content:
             application/json:
               schema:
@@ -148,8 +146,8 @@ paths:
   /pets/{id}/play:
     post:
       tags:
-      - Aktionen
-      summary: Mit Haustier spielen .. Mood verringert sich um...
+        - Aktionen
+      summary: Mit Haustier spielen (Mood steigt)
       parameters:
         - name: id
           in: path
@@ -158,32 +156,32 @@ paths:
             type: integer
       responses:
         '200':
-          description: erfolgreich gespielt
+          description: Gespielt
           content:
             application/json:
               schema:
                 type: string
-                example: fed
+                example: Pet played with
         '404':
-            description: Tier nicht gefunden
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: No Pet was found
+          description: Tier nicht gefunden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Play failed
         '500':
-          description: Error
+          description: Fehler beim Spielen
           content:
             application/json:
               schema:
                 type: string
                 example: Error
-        
+
   /pets/{id}/sleep:
     post:
       tags:
-      - Aktionen
-      summary: Haustier schläft .. Sleep verringert sich um...
+        - Aktionen
+      summary: Haustier schläft (Energie steigt)
       parameters:
         - name: id
           in: path
@@ -197,16 +195,16 @@ paths:
             application/json:
               schema:
                 type: string
-                example: fed
+                example: Pet slept
         '404':
-            description: Tier nicht gefunden
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: No Pet was found
+          description: Tier nicht gefunden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Sleep failed
         '500':
-          description: Error
+          description: Fehler beim Schlafen
           content:
             application/json:
               schema:
@@ -216,11 +214,10 @@ paths:
   /auth/register:
     post:
       tags:
-      - Anmeldung
+        - Anmeldung
       summary: Benutzer registrieren
       requestBody:
         required: true
-        description: Aktualisierte Werte
         content:
           application/json:
             schema:
@@ -231,22 +228,15 @@ paths:
                 password:
                   type: string
       responses:
-        '200':
+        '201':
           description: Registrierung erfolgreich
           content:
             application/json:
               schema:
                 type: string
-                example: Register succed
-        '404':
-            description: Registrierung fehlgeschlagen
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: Register failed
-        '401':
-          description: Falsche Zugangsdaten
+                example: User registered
+        '500':
+          description: Fehler bei der Registrierung
           content:
             application/json:
               schema:
@@ -256,11 +246,10 @@ paths:
   /auth/login:
     post:
       tags:
-      - Anmeldung
+        - Anmeldung
       summary: Benutzer einloggen
       requestBody:
         required: true
-        description: Aktualisierte Werte
         content:
           application/json:
             schema:
@@ -277,28 +266,21 @@ paths:
             application/json:
               schema:
                 type: string
-                example: Login succed
-        '404':
-            description: Login fehlgeschlagen
-            content:
-              application/json:
-                schema:
-                  type: string
-                  example: Login failed
+                example: Login successful
         '401':
           description: Falsche Zugangsdaten
           content:
             application/json:
               schema:
                 type: string
+                example: Login failed
+        '500':
+          description: Fehler beim Login
+          content:
+            application/json:
+              schema:
+                type: string
                 example: Error
-
-  
-
-          
-
-
-
 
 components:
   schemas:
@@ -317,8 +299,6 @@ components:
         hunger:
           type: integer
           example: 80
-          #minimum: 0
-          #maximum: 100
         energy:
           type: integer
           example: 60
@@ -332,10 +312,3 @@ components:
         - hunger
         - energy
         - mood
-
-  securitySchemes:
-    basicAuth: 
-      type: http
-      scheme: basic
-security:
-  - basicAuth: []
